Class4/app4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app4
  labels:
    app: app4
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app4
  template:
    metadata:
      labels:
        app: app4
    spec:
      containers:
      - name: app4
        image: kaizenacademy/portal-hotels:1.0.0
        ports:
        - containerPort: 8080
