Class4/hostname-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: "hello.adilet.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app1
            port:
              number: 80
      - pathType: Prefix
        path: "/flights"
        backend:
          service:
            name: app2
            port:
              number: 80
  - host: "world.adilet.com"
    http:
      paths:
      - pathType: Prefix
        path: "/cars"
        backend:
          service:
            name: app3
            port:
              number: 80
      - pathType: Prefix
        path: "/hotels"
        backend:
          service:
            name: app4
            port:
              number: 80
